--- a/ProjetoT2.qsf
+++ b/ProjetoT2.qsf
@@ -72,3 +72,5 @@ set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name VHDL_FILE RA.vhd
 set_global_assignment -name VHDL_FILE RG.vhd
+set_global_assignment -name VHDL_FILE Reg.vhd
+set_global_assignment -name VHDL_FILE bufferTriState.vhd
